--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="/styles.css">
     <script src="/config.js" defer></script>
 </head>
+<meta name="description" content="Crackstream Online is the #1 free sports streaming website. Watch live football, basketball, UFC, boxing, hockey, and more in HD without signup. Stay updated with the latest sports events worldwide.">
+<meta name="keywords" content="Crackstream, free sports streaming, live football streams, UFC live, NBA live, boxing streams, crackstream online">
+<meta name="author" content="Crackstream Online">
+
+    
 <body>
     <div class="container">
         <header class="header">
