--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <meta name="keywords" content="Crackstream, free sports streaming, live football streams, UFC live, NBA live, boxing streams, crackstream online">
 <meta name="author" content="Crackstream Online">
 
+    <meta name="google-site-verification" content="XrT4SVu95woRwLX7Ru_8por7debn89jdAkLGHvF0rY0" />
+
     
 <body>
     <div class="container">
