--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta name="google-site-verification" content="XrT4SVu95woRwLX7Ru_8por7debn89jdAkLGHvF0rY0" />
+    <meta name="description" content="Crackstream Online is the #1 free sports streaming website. Watch live football, basketball, UFC, boxing, hockey, and more in HD without signup. Stay updated with the latest sports events worldwide.">
+<meta name="keywords" content="Crackstream, free sports streaming, live football streams, UFC live, NBA live, boxing streams, crackstream online">
+<meta name="author" content="Crackstream Online">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
