--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="description" content="Crackstream Online is the #1 free sports streaming website. Watch live football, basketball, UFC, boxing, hockey, and more in HD without signup. Stay updated with the latest sports events worldwide.">
 <meta name="keywords" content="Crackstream, free sports streaming, live football streams, UFC live, NBA live, boxing streams, crackstream online">
 <meta name="author" content="Crackstream Online">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R5400DVW67');
+</script>
+    
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
