--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="monetag" content="60a0edf986bf49f7243144a93c7f248d">
     
      <!-- Page title -->
     <title>crackstream Online Watch live football, basketball, UFC, boxing, hockey</title>
